--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ VITE_API_BASE_URL=https://765ff52402ca.ngrok-free.app
 VITE_ADMIN_URL=${VITE_API_BASE_URL}/backdoor #//"https://open-pr-v1-api.terrabyte.com.ng";
 VITE_ANDROID_APP_URL=https://play.google.com/store/apps/details?id=com.terrabyte.app
 VITE_IOS_APP_URL=https://apps.apple.com/app/terrabyte/id123456789
+VITE_GOOGLE_CLIENT_ID=95276904788-nqipbbd1necq6k73j8nknb6s17tn5btn.apps.googleusercontent.com
