--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.12.0",
+    "@react-oauth/google": "^0.12.1",
     "recharts": "^3.6.0",
     "zustand": "^5.0.10"
   },
