--- a/.env
+++ b/.env
@@ -4,3 +4,7 @@ VITE_ANDROID_APP_URL=https://play.google.com/store/apps/details?id=com.pheebzdev
 VITE_IOS_APP_URL=https://apps.apple.com/us/app/terrabyte-by-pheebz-dev/id6468982057
 VITE_GOOGLE_CLIENT_ID=195276904788-nqipbbd1necq6k73j8nknb6s17tn5btn.apps.googleusercontent.com
 VITE_BASE_URL=https://app.terrabyte.com.ng
+
+# Cloudinary - for profile picture uploads (replace with your values)
+VITE_CLOUDINARY_CLOUD_NAME=dw7fvs6i2
+VITE_CLOUDINARY_UPLOAD_PRESET=ml_default
